--- a/src/lib/utils/styles/button.scss
+++ b/src/lib/utils/styles/button.scss
@@ -1,7 +1,7 @@
 .button {
   outline-color: transparent;
-  background-color: red;
-  color: #fff;
+  background-color: #f4f4f5;
+  color: #000;
   border-radius: 4px;
 
   // button size
@@ -10,4 +10,10 @@
   @include objectSize('md', $md-paddingX, $md-fontSize, $md-lineHeight, $md-height, $md-minWidth);
   @include objectSize('lg', $lg-paddingX, $lg-fontSize, $lg-lineHeight, $lg-height, $lg-minWidth);
   @include objectSize('xl', $xl-paddingX, $xl-fontSize, $xl-lineHeight, $xl-height, $xl-minWidth);
+
+  @include buttonVariant('outline', transparent, rgb(228, 228, 231), #000, false);
+  @include buttonVariant('simple', #f4f4f5, transparent, #000, false);
+  @include buttonVariant('solid', #f4f4f5, #d0d0d0, #000, false);
+  @include buttonVariant('link', transparent, transparent, #000, true);
+
 }
