--- a/src/lib/utils/styles/_mixin.scss
+++ b/src/lib/utils/styles/_mixin.scss
@@ -15,10 +15,14 @@
     border: 1px solid $borderColor;
     color: $color;
 
-    @if $hover {
+    @if $type =='link' {
       &:hover {
         text-decoration: underline;
       }
+    }
+
+    &:hover {
+      background-color: darken($backgroundColor,10%);
     }
   }
 }
